--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,11 @@
 
+<% if false %>
+
 <%= render 'layouts/landing_page_v2' %>
 
+<% end %>
 
-<% if false %>
+<% if true %>
  <%= render :partial => '/shared/oli_landing', :locals => {
 
   :heading => 'CONFUSED, OVERWHELMED AND UNFULFILLED?', 
