--- a/app/views/landing/_features.html.erb
+++ b/app/views/landing/_features.html.erb
@@ -11,8 +11,8 @@
         </div>
 
   <div class="feature__items">
-    <div class="row  row-centered">
-      <div class="col-sm-5  col-centered center-block feature__item feature_item--pull-up">
+    <div class="row row-centered">
+      <div class="col-sm-5 col-centered center-block feature__item feature_item--pull-up">
         <%= image_tag "illustration_video.png" %>
       </div>
 
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="row  row-centered">
+    <div class="row row-centered">
       <div class="col-sm-5 col-centered center-block feature__item oli__text--body oli-pn-light">
        <div class="feature__item-title oli-arial">
         Daily Inspiration & Monthly Webinars
@@ -34,7 +34,7 @@
 
       <div class="col-sm-5 col-centered center-block feature__item feature_item--pull-up">
 
-        <%= image_tag "illustration_desk.png" %>
+        COL-2
       </div>
     </div>
 
