--- a/app/views/oli/_landing_form.html.erb
+++ b/app/views/oli/_landing_form.html.erb
@@ -1,6 +1,5 @@
-<div class="oli-form oli-form-register">
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="oli-form oli-form-register old-form">
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "js-landing-register"}) do |f| %>
   <%= devise_error_messages! %>
 
   <%= f.text_field :name, autofocus: true, :class => "submit-field-name-oli", :placeholder => "Name", :autocomplete => :off %>
@@ -9,9 +8,9 @@
 
     <%= f.password_field :password, autocomplete: "off", :class => "submit-field-oli", :placeholder => "Password", :autocomplete => :off, :type => "password"  %>
 
-  <button class="ladda-button submit-button-oli" data-style="zoom-out"><span class="ladda-label"><%= "Sign up for free training" %></span></button>
-  <div class="signed-in-oli oli-text oli-small signed-in-oli">Already have an account? <%= link_to  "Sign in", new_user_session_path %> </div>
-  <div class="status-oli"> <%= flash.now[:notice] %></div>
+  <button class="ladda-button submit-button-oli" data-style="zoom-out"><span class="ladda-label"><%= "SIGN UP" %></span></button>
+  <div class="signed-in-oli oli-text oli-small signed-in-oli signed-in-oli--dark">Already have an account? <%= link_to  "Sign in", new_user_session_path %> </div>
+  <div class="status-oli status-oli--dark"> <%= flash.now[:notice] %></div>
 <% end %>
 
 </div>
