--- a/app/assets/stylesheets/oli-base.css.scss
+++ b/app/assets/stylesheets/oli-base.css.scss
@@ -11,6 +11,9 @@
 margin: 0;
 }
 
+a {
+  outline: 0 !important;
+}
 // body{
 //   overflow-x: hidden !important;
 //   white-space: nowrap !important;
