--- a/app/views/landing/_top.html.erb
+++ b/app/views/landing/_top.html.erb
@@ -22,14 +22,14 @@
     An online personal development coaching platform.
   </div>
 </div>
-
+<div class="offset-vertical"></div>
 <div class="lnd__intro-play lnd__intro-text lnd__intro-text--upper-3">
   <div class="inline-block">WATCH</div>
   <div class="lnd__play-button play-button"><%= fa_icon "play" %></div>
   <div class="inline-block">VIDEO</div>
 
 </div>
-
+<div class="offset-vertical"></div>
 <div class="lnd__intro-section lnd__intro-section--bottom">
   <div class="lnd__intro-text lnd__intro-text--reg-2 lnd__intro-text--shadow">
   We help people learn about themselves so they can
