--- a/app/views/layouts/_landing_page_v2.html.erb
+++ b/app/views/layouts/_landing_page_v2.html.erb
@@ -45,7 +45,7 @@
         </li>
 
         <li>
-          <a class="page-s ycroll js-switch-to-login" href="#log-in">Log in</a>
+          <a class="page-scroll js-switch-to-login" href="#log-in">Log in</a>
         </li>
 
       </ul>
