--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 <!-- <link href="/assets/video-js.css" rel="stylesheet">
  -->
   <title>Get OLI!</title>
-  <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <script type="text/javascript">
   document.createElement('video');document.createElement('audio');document.createElement('track');
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
