improved intro screen for mobile devices

--- a/app/assets/stylesheets/oli-media-overrides.css.scss
+++ b/app/assets/stylesheets/oli-media-overrides.css.scss
@@ -35,6 +35,14 @@
 
   }
 
+  .lnd__section--large{
+    height: 200% !important;
+  }
+
+  .lnd__about-container{
+    height: 100%;
+  }
+
   .lnd__intro-text--upper-3{
     // font-size: 7.5vw !important;
     letter-spacing: 0em;
