--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -8,6 +8,10 @@ body, html {
     font-size: 1.02em;
 }
 
+.navbar-course {
+    padding: 0;
+}
+
 .alert-oli, .notice-oli {
     margin: 0;
     padding: 0;
