--- a/app/assets/stylesheets/oli-media-overrides.css.scss
+++ b/app/assets/stylesheets/oli-media-overrides.css.scss
@@ -19,6 +19,9 @@
     // background: green !important;
   }
 
+  .col-sm-6{
+    // height: 45% !important;
+  }
   .lnd__intro-text--upper-1{
     font-size: 11vw !important;
     line-height: .8em !important;
@@ -40,7 +43,11 @@
   }
 
   .lnd__about-container{
-    height: 100%;
+    // height: 100%;
+  }
+
+  .navbar{
+    min-height: 62px !important;
   }
 
   .lnd__intro-text--upper-3{
