--- a/app/views/landing/_about.html.erb
+++ b/app/views/landing/_about.html.erb
@@ -1,7 +1,7 @@
-<div class="lnd__section-sub">
-  <div class="container">
-    <div class="row-centered container">
-      <div class="col-sm-6 center-block">
+<div class="lnd__section-sub outer">
+  <div class="container middle">
+    <div class="container inner">
+      <div class="col-sm-6 center-block about__item--1">
         <div class="oli__text oli__text--white">
           <div class="oli__text--title lnd__title">
             WHAT IS OLI?
