--- a/app/views/landing/_features.html.erb
+++ b/app/views/landing/_features.html.erb
@@ -4,8 +4,13 @@
         FEATURES
           </div>
 
-          <div class="oli__text--body oli-pn-light">
+          <div class="mobile__hide oli__text--body oli-pn-light">
            We envision a world in which every individual is confidently shining their unique light in the world; inspired by themselves; fulfilled by the work they do; and spreading that joy to those around them. We envision a world in which education is transformed such that it makes a real difference in people's lives.
+           OLI Interactive is how WE are bringing this vision to life!
+          </div>
+
+          <div class="mobile__show oli__text--body oli-pn-light">
+          We envision a world in which education is transformed such that it makes a real difference in people's lives.
            OLI Interactive is how WE are bringing this vision to life!
           </div>
         </div>
@@ -20,7 +25,12 @@
         <div class="feature__item-title oli-arial">
           Instructional Videos & Interactive Exercises
         </div>
+        <div class="mobile__hide">
         Gather the tools you need to live a fulfilling life with dozens of career coaching videos, and then Identify your values and passions through fun and creative workshops.
+      </div>
+      <div class="mobile__show">
+        Gather the tools you need to live a fulfilling life with dozens of career coaching videos.
+      </div>
       </div>
     </div>
 
@@ -29,12 +39,18 @@
        <div class="feature__item-title oli-arial">
         Daily Inspiration & Monthly Webinars
        </div>
+       <div class="mobile__hide">
+
        Login daily to receive your DailyOLI, an inspirational quote or thought-provoking exercise. Participate in community webinars that cover a multitude of career-building topics.
+     </div>
+       <div class="mobile__show">Participate in community webinars that cover a multitude of career-building topics.
+     </div>
+
       </div>
 
       <div class="col-sm-5 col-centered center-block feature__item feature_item--pull-up">
 
-        COL-2
+        <%= image_tag "illustration_desk.png" %>
       </div>
     </div>
 
@@ -49,7 +65,9 @@
           One-on-One Coaching*
         </div>
         Receive personalized career coaching with Ahalya Kumaran, host of AhalyaTV, PLUS a curated list of tools that help to foster your inner light, sent right to your inbox.
+        <div style="font-size: .7em">
         *Premium Membership Only
+        </div>
       </div>
     </div>
   </div>
