--- a/app/views/landing/_log_in.html.erb
+++ b/app/views/landing/_log_in.html.erb
@@ -4,7 +4,7 @@
   SIGN UP FOR YOUR
   </div>
 
-    <div class="lnd__intro-text lnd__intro-text--upper-1 lnd__intro-text--shadow">
+    <div class="lnd__intro-text lnd__intro-text--upper-1 lnd__intro-text--upper-1-smaller lnd__intro-text--shadow">
       FREE TRAINING
     </div>
 
