--- a/app/views/landing/_testimonials.html.erb
+++ b/app/views/landing/_testimonials.html.erb
@@ -1,21 +1,23 @@
-<div class="lnd__section-sub testi">
+<div class="lnd__section-sub outer">
+  <div class="container testi middle">
 
-  <div clss="test__main">
-    <div class="testi__text oli-pn-light">
-      When it comes down leading the life you want, Friedman says you first must "discover what is uniquely you." You need to harness your passions, interests, and skills and make them valuable for other people.
+    <div clss="container inner">
+      <div class="testi__text oli-pn-light ">
+        When it comes down leading the life you want, Friedman says you first must "discover what is uniquely you." You need to harness your passions, interests, and skills and make them valuable for other people.
 
 
-    </div>
-
-    <div class="feature__item-title oli__text--body  oli-arial testi__item-title">
-     STEWART FRIEDMAN
-      <div class="testi-text--sub">
-        author of <i>Leading the Life You want</i> 
       </div>
-    </div>
 
-    <div class="testi__img">
-      <%= image_tag 'stew_fri.png' %>
+      <div class="feature__item-title oli__text--body  oli-arial testi__item-title">
+       STEWART FRIEDMAN
+        <div class="testi-text--sub">
+          author of <i>Leading the Life You want</i> 
+        </div>
+      </div>
+
+      <div class="testi__img">
+        <%= image_tag 'stew_fri.png' %>
+      </div>
     </div>
   </div>
 </div>
