--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -17,6 +17,7 @@
 }
 
 
+
 .lnd__title{
     margin-bottom: 15px;
 }
@@ -147,9 +148,32 @@
     border-radius: 105px;
 }
 
+.about__item--1{
+    margin-bottom: 15%;
+}
+
 .inline-block{
     display: inline-block;
 }
+
+.outer {
+    display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.middle {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.inner {
+    margin-left: auto;
+    margin-right: auto; 
+    width: 100%;
+}
+
 
 .lnd__intro-play{
     line-height: 3em;
@@ -161,6 +185,10 @@
     overflow-x: hidden;
     margin: 0 auto;
     // margin: 0 15%;
+}
+
+.lnd__section--padding{
+    padding-top: 62px;
 }
 
 .offset-vertical{
@@ -304,7 +332,7 @@
     // padding-top: 150px;
     text-align: center;
     // background: #fff;
-    padding-top: 62px; 
+    // padding-top: 62px; 
     // margin-top: -62px;
 }
 
