--- a/app/views/landing/_features.html.erb
+++ b/app/views/landing/_features.html.erb
@@ -16,7 +16,7 @@
         </div>
 
   <div class="feature__items">
-    <div class="row row-centered">
+    <div class="row row-centered features__item-row">
       <div class="col-sm-5 col-centered center-block feature__item feature_item--pull-up">
         <%= image_tag "illustration_video.png" %>
       </div>
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="row row-centered">
+    <div class="row row-centered features__item-row">
       <div class="col-sm-5 col-centered center-block feature__item oli__text--body oli-pn-light">
        <div class="feature__item-title oli-arial">
         Daily Inspiration & Monthly Webinars
@@ -55,7 +55,7 @@
     </div>
 
 
-    <div class="row  row-centered">
+    <div class="row  row-centered features__item-row">
       <div class="col-sm-5 col-centered center-block feature__item feature_item--pull-up">
         <%= image_tag "illustration_blank.png" %>
       </div>
