--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -356,6 +356,7 @@
 }
 
 .lnd__man-background{
+    min-height: 1000px;
     width: 100%;
     height: 100%;
     background: image-url("beautiful_business_mmn.jpg") no-repeat center center fixed; 
@@ -373,6 +374,7 @@
 
 .lnd__section--large{
     height: 145%;
+    min-height: 1500px;
     position: absolute;
     // top: 62px;
     // background: orange;
@@ -390,6 +392,7 @@
 
 .lnd__about-container{
     height: 45%;
+    min-height: 300px;
     width: 100%;
     background: oli-orange(.7);
     opacity: 1;
