updated landing page to improve responsiveness

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -342,6 +342,7 @@
 
 .lnd__intro-container{
     height: 100%;
+    min-height: 700px;
     overflow: hidden;
     // position: absolute;
     // top: 0;
