--- a/app/views/layouts/_landing_page_v2.html.erb
+++ b/app/views/layouts/_landing_page_v2.html.erb
@@ -89,7 +89,7 @@
 </section>
 
 <!-- Contact Section -->
-<section id="testimonials" class="lnd__section lnd__section--small outer">
+<section id="testimonials" class="lnd__section lnd__testi-container lnd__section--small outer">
   
         <%= render "/landing/testimonials" %>
 
