updated landing page to improve responsiveness

--- a/app/views/landing/_about.html.erb
+++ b/app/views/landing/_about.html.erb
@@ -1,6 +1,6 @@
-<div class="lnd__section-sub outer">
-  <div class="container middle">
-    <div class="container inner">
+<div class="lnd__section-sub ">
+  <div class=" middle">
+    <div class=" inner">
       <div class="col-sm-6 center-block about__item--1">
         <div class="oli__text oli__text--white">
           <div class="oli__text--title lnd__title">
