--- a/app/views/layouts/_landing_page_v2.html.erb
+++ b/app/views/layouts/_landing_page_v2.html.erb
@@ -67,7 +67,7 @@
 
   </section>
 
-  <section class="lnd__section lnd__about-container" id="about">
+  <section class="lnd__section lnd__about-container lnd__section--padding" id="about">
     <span id="screen1-anchor"></span>
     <span id="screen2-anchor"></span>
     <span id="screen3-anchor"></span>
@@ -79,7 +79,7 @@
 
 <!-- Services Section -->
 <section id="features" class="lnd__features-container lnd__section lnd__section--padding">
-  <div class="container">
+  <div style="margin: auto" class="container">
     <div class="row">
       <div class="col-lg-12">
         <%= render "/landing/features" %>
